--- a/Dao/src/com/example/dao/bak/MainActivity.java.2
+++ b/Dao/src/com/example/dao/bak/MainActivity.java.2
@@ -48,7 +48,7 @@ public class MainActivity extends Activity {
         
         
 		try {
-			String path = "file://" +Environment.getExternalStorageDirectory().getPath()+ "/surabaya.osm";
+			String path = "file://" +Environment.getExternalStorageDirectory().getPath()+ /testmap.osm";
 		
 	        OSM osm;
 			osm = OSMParser.parse(path);
